--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "raviger": "^1.4.3",
-    "react": "16.10.2",
-    "react-dom": "16.10.2",
-    "react-scripts": "3.2.0",
-    "sanitize.css": "11.0.0",
-    "styled-components": "4.4.0"
+    "react": "^16.13.1",
+    "react-dom": "16.13.1",
+    "react-scripts": "^3.4.1",
+    "rsuite": "^4.7.5",
+    "sanitize.css": "11.0.1",
+    "styled-components": "5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
