--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "raviger": "^1.4.3",
     "react": "^16.13.1",
     "react-dom": "16.13.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.5.0",
     "rsuite": "^4.7.5",
     "sanitize.css": "^11.0.1",
     "styled-components": "^5.1.1"
