--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "grommet": "^2.14.0",
     "grommet-icons": "^4.4.0",
     "raviger": "^1.4.3",
@@ -12,7 +13,8 @@
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-devtools": "^3.5.0",
-    "rsuite": "^4.7.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "sanitize.css": "^11.0.1",
     "styled-components": "^5.1.1"
   },
