FEAT: Added calendar lib + component to page

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "axios": "^0.19.2",
     "grommet": "https://github.com/grommet/grommet/tarball/stable",
     "grommet-icons": "^4.4.0",
+    "moment": "^2.27.0",
     "raviger": "^1.4.3",
     "react": "^16.13.1",
+    "react-big-calendar": "^0.26.0",
     "react-dom": "16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
